# spawn

./: .gitignore  LICENSE  index.html  package.json  vite.config.ts
docs/plans/: 2026-02-25-agenthub-design.md  2026-02-25-agenthub-implementation.md  2026-02-25-auto-close-tab-on-exit-design.md  2026-02-25-auto-close-tab-on-exit.md  2026-02-25-project-groups-design.md  2026-02-25-project-groups.md
src/: App.css  App.test.tsx  App.tsx  index.css  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_agent_configs.sql  003_project_groups.sql
src-tauri/src/: agent_configs.rs  db.rs  git_ops.rs  github.rs  group_ops.rs  lib.rs  main.rs  projects.rs  pty_manager.rs  sessions.rs  tasks.rs  ws_server.rs
src/components/: AddProjectModal.test.tsx  AddProjectModal.tsx  GitPanel.tsx  GroupSection.tsx  LaunchAgentModal.test.tsx  LaunchAgentModal.tsx  MarkdownEditor.tsx  ProjectPanel.test.tsx  ProjectPanel.tsx  SettingsModal.tsx  ShellPane.tsx  Sidebar.test.tsx  Sidebar.tsx  Terminal.test.tsx  Terminal.tsx  TerminalPane.test.tsx  TerminalPane.tsx
src/hooks/: useTerminalWs.ts
src/lib/: terminalBus.ts
src/store/: agentConfigs.ts  groups.ts  projects.ts  sessions.ts  tasks.ts
