[package]
name = "spawn"
version = "0.1.0"
description = "Spawn desktop app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "spawn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "rt", "macros", "sync", "time", "net"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
axum = { version = "0.7", features = ["ws"] }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
keyring = { version = "2", features = ["default"] }
git2 = "0.19"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3"
